New index page. Brief description of project and reference to Savannah were added. De facto, new page.

--- a/index.html
+++ b/index.html
@@ -1,13 +1,67 @@
-<h2>dotgnu-forum</h2>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
+     "http://www.w3.org/TR/html4/strict.dtd">
+<HTML>
 
-<p>The <a
-href="http://savannah.gnu.org/projects/dotgnu-forum/">dotgnu-forum
-subproject</a> of <a
-href="http://www.gnu.org/software/dotgnu/">dotgnu</a> is looking for a
-maintainer.  (There are plenty of other dotgnu projects needing work,
-too.)
+<HEAD>
 
-<p>If you're interested, please take a look at this general information
-about GNU packages and being a GNU maintainer
-</help/evaluation.html#whatmeans>, and then email maintainers@gnu.org
-with a bit about your background and interest. Thanks!
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
+
+<meta name="description" content="Main page of DotGNU Forum project" >
+<meta name="keywords" content="GNU,DotGNU,DotGNU Forum" >
+<meta name="author" content="Vasily Eremenko" >
+
+<TITLE>DotGNU Forum</TITLE>
+
+</HEAD>
+
+<BODY>
+
+<h2>DotGNU Forum</h2>
+
+<DIV>
+
+<H3>Short Description</H3>
+
+<P>This project is part of the GNU Project.</P>
+
+<P>The <STRONG>DotGNU Forum System, or simply Forum,</STRONG>
+is a multi-user simultaneous editing supporting
+system with an internal document web.
+That way too complicated definition basically comes down
+to the following:</P>
+
+<UL>
+    <LI>Forum allows multiple users to work at a single
+    document with realtime updating of changes.</LI>
+
+    <LI>Forum allows multiple users to communicate with
+    each other while editing.</LI>
+
+    <LI>Forum allows documents to refer to other documents.</LI>
+</UL>
+
+</DIV>
+
+<DIV>
+
+<H3>References</H3>
+
+<UL>
+    <LI><A HREF="http://savannah.gnu.org/projects/dotgnu-forum/">DotGNU Forum
+    page at</A> <A HREF="http://savannah.gnu.org">Savannah</A>.</LI>
+</UL>
+
+</DIV>
+
+<DIV>
+
+<a href="http://validator.w3.org/check?uri=referer"><img
+        src="http://www.w3.org/Icons/valid-html401"
+        alt="Valid HTML 4.01 Strict"
+        id="bannerw3cvalidhtml"></a>
+
+</DIV>
+
+</BODY>
+
+</HTML>
