*** empty log message ***

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 
 <meta name="description" content="Main page of DotGNU Forum project" >
-<meta name="keywords" content="GNU,DotGNU,DotGNU Forum" >
+<meta name="keywords" content="GNU,DotGNU,DotGNU Forum,DotGNU-Forum" >
 <meta name="author" content="Vasily Eremenko" >
 
 <TITLE>DotGNU Forum</TITLE>
@@ -27,18 +27,7 @@
 <P>The <STRONG>DotGNU Forum System, or simply Forum,</STRONG>
 is a multi-user simultaneous editing supporting
 system with an internal document web.
-That way too complicated definition basically comes down
-to the following:</P>
-
-<UL>
-    <LI>Forum allows multiple users to work at a single
-    document with realtime updating of changes.</LI>
-
-    <LI>Forum allows multiple users to communicate with
-    each other while editing.</LI>
-
-    <LI>Forum allows documents to refer to other documents.</LI>
-</UL>
+Maybe, in the future it should become CMS and MWC, written in C#.
 
 </DIV>
 
