index.html was updated according to The GNU/FSF Web Site Guidelines.

--- a/index.html
+++ b/index.html
@@ -1,56 +1,207 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
-     "http://www.w3.org/TR/html4/strict.dtd">
-<HTML>
+<!--#include virtual="/server/header.html" -->
+<title>DotGNU Forum System
+- GNU Project - Free Software Foundation</title>
+<!--#include virtual="/server/banner.html" -->
 
-<HEAD>
 
-<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
+<h2>DotGNU Forum System</h2>
 
-<meta name="description" content="Main page of DotGNU Forum project" >
-<meta name="keywords" content="GNU,DotGNU,DotGNU Forum,DotGNU-Forum" >
-<meta name="author" content="Vasily Eremenko" >
 
-<TITLE>DotGNU Forum</TITLE>
 
-</HEAD>
-
-<BODY>
-
-<h2>DotGNU Forum</h2>
-
-<DIV>
-
-<H3>Short Description</H3>
-
-<P>This project is part of the GNU Project.</P>
-
-<P>The <STRONG>DotGNU Forum System, or simply Forum,</STRONG>
+<p>This project is part of the GNU Project
+(<a href="/software/dotgnu/index.html">DotGNU subproject</a>).
+The <strong>DotGNU Forum System, or simply DotGNU Forum,</strong>
 is a multi-user simultaneous editing supporting
 system with an internal document web.
-Maybe, in the future it should become CMS and MWC, written in C#.
+Maybe, in the future it should become the
+Website Revision System
+(<acronym title="Website Revision System">WRS</acronym>) and
+Model-View Controller
+(<acronym title="Model-View Controller">MVC</acronym>),
+written in C#.</p>
 
-</DIV>
 
-<DIV>
 
-<H3>References</H3>
 
-<UL>
-    <LI><A HREF="http://savannah.gnu.org/projects/dotgnu-forum/">DotGNU Forum
-    page at</A> <A HREF="http://savannah.gnu.org">Savannah</A>.</LI>
-</UL>
+<h3>Downloading DotGNU Forum</h3>
 
-</DIV>
+<p>At this time there is not any distributable versions available... Yet!</p>
 
-<DIV>
+<p>You can take the
+<acronym title="Concurrent Versions System">CVS</acronym> snapshot of the
+source code by visiting
+<a href="http://savannah.gnu.org/projects/dotgnu-forum/">DotGNU
+Forum
+page</a> at <a href="http://savannah.gnu.org">savannah.gnu.org</a>.</p>
 
-<a href="http://validator.w3.org/check?uri=referer"><img
-        src="http://www.w3.org/Icons/valid-html401"
-        alt="Valid HTML 4.01 Strict"
-        id="bannerw3cvalidhtml"></a>
 
-</DIV>
 
-</BODY>
 
-</HTML>
+<h3>Documentation</h3>
+
+<p>No manuals or any else documents at all have been written... Yet!</p>
+
+
+
+
+<h3>Mailing lists</h3>
+
+<p>DotGNU Forum has three mailing lists:
+<a href="mailto:bug-dotgnu-forum@gnu.org">&lt;bug-dotgnu-forum@gnu.org&gt;</a>,
+<a href="mailto:help-dotgnu-forum@gnu.org">&lt;help-dotgnu-forum@gnu.org&gt;</a>
+and
+<a href="mailto:info-dotgnu-forum@gnu.org">&lt;info-dotgnu-forum@gnu.org&gt;</a>.</p>
+
+<p>The main discussion list is
+<a href="mailto:bug-dotgnu-forum@gnu.org">&lt;bug-dotgnu-forum@gnu.org&gt;</a>,
+and is used to discuss most aspects of DotGNU Forum, including development and
+enhancement requests, as well as bug reports.</p>
+
+<p>There is a separate list for general user help and discussion,
+<a href="mailto:help-dotgnu-forum@gnu.org">&lt;help-dotgnu-forum@gnu.org&gt;</a>.</p>
+
+<p>Announcements about
+DotGNU Forum
+and most other GNU software are made on
+<a href="mailto:info-dotgnu-forum@gnu.org">&lt;info-dotgnu-forum@gnu.org&gt;</a>.</p>
+
+<p>To subscribe to these or any GNU mailing lists, please send an empty
+mail with a Subject: header of just <tt>subscribe</tt> to the relevant
+-request list.  For example, to subscribe yourself to the GNU
+announcement list, you would send mail to <a
+href="mailto:info-dotgnu-forum@gnu.org?Subject=subscribe"
+>&lt;info-dotgnu-forum@gnu.org&gt;</a>.
+Or you can use the <a
+href="http://lists.gnu.org/mailman/listinfo/info-dotgnu-forum">mailing list web
+interface</a>.</p>
+
+
+
+
+<h3>Getting involved</h3>
+
+<p>Development of
+DotGNU Forum System,
+and GNU in general, is a volunteer effort, and you can contribute.  For
+information, please read <a href="/help/">How to help GNU</a>.  If you'd
+like to get involved, it's a good idea to join the discussion mailing
+list (see above).</p>
+
+
+
+
+
+
+<h4>Development</h4>
+
+<p>For development sources, bug and patch trackers, and other
+information, please see the
+<a href="http://savannah.gnu.org/projects/dotgnu-forum/">DotGNU
+Forum page</a> at
+<a href="http://savannah.gnu.org">savannah.gnu.org</a>.</p>
+
+
+
+
+<h4>Translating DotGNU Forum</h4>
+
+<p><!-- To translate
+DotGNU Forum's
+messages into other languages, please see the <a
+href="http://translationproject.org/domain/foo.html">Translation Project
+page for
+Foo</a>. -->
+If you have a new translation of the message strings,
+or updates to the existing strings, please have the changes made in this
+repository. <!-- Only translations from this site will be incorporated into
+Foo. -->
+For more information, see the <a
+href="http://translationproject.org/html/welcome.html">Translation
+Project</a>.
+
+
+
+
+
+<h4>Maintainer</h4>
+
+<p>DotGNU Forum System
+is currently being maintained by
+Vasily Eremenko.
+Please use the mailing lists for contact.</p>
+
+
+
+
+
+<h3>Licensing</h3>
+
+<p>DotGNU Forum System
+is free software; you can redistribute it and/or modify it under the
+terms of the <a href="http://www.gnu.org/licenses/gpl.html"
+rel="license">GNU General Public License</a> as published by the Free
+Software Foundation; either version 3 of the License, or (at your
+option) any later version.</p>
+
+
+
+</div><!-- for id="content", starts in the include above -->
+
+<!--#include virtual="/server/footer.html" -->
+
+<div id="footer">
+    <p>Please send FSF &amp; GNU inquiries to <a href=
+    "mailto:gnu@gnu.org"><em>gnu@gnu.org</em></a>. There are also
+    <a href="/home.html#ContactInfo">other
+    ways to contact</a> the
+    FSF.<br />
+    Please send broken links and other corrections (or suggestions) to
+    <a href=
+    "mailto:bug-dotgnu-forum@gnu.org">&lt;bug-dotgnu-forum@gnu.org&gt;</a>.</p>
+
+    <p>Please see the <a
+    href="/server/standards/README.translations.html">Translations
+    README</a> for information on coordinating and submitting translations
+    of this article.</p>
+
+    <p>Copyright &copy; 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009
+    Free Software Foundation, Inc.</p>
+
+    <p>Verbatim copying and distribution of this entire article are
+    permitted worldwide, without royalty, in any medium, provided this
+    notice, and the copyright notice, are preserved.</p>
+
+    <p>Updated: <!-- timestamp start -->
+    $Date: 2009/08/08 19:35:13 $
+    <!-- timestamp end --></p>
+</div>
+
+
+<div id="translations">
+<h4>Translations of this page</h4>
+
+<!-- Please keep this list alphabetical by language code. -->
+<!-- Comment what the language is for each type, i.e. de is German. -->
+<!-- Write the language name in its own language (Deutsch) in the text. -->
+<!-- If you add a new language here, please -->
+<!-- advise web-translators@gnu.org and add it to -->
+<!--  - /home/www/html/server/standards/README.translations.html -->
+<!--  - one of the lists under the section "Translations Underway" -->
+<!--  - if there is a translation team, you also have to add an alias -->
+<!--  to mail.gnu.org:/com/mailer/aliases -->
+<!-- Please also check you have the language code right; see: -->
+<!-- http://www.loc.gov/standards/iso639-2/php/code_list.php -->
+<!-- If the 2-letter ISO 639-1 code is not available, -->
+<!-- use the 3-letter ISO 639-2. -->
+<!-- Please use W3C normative character entities. -->
+
+<ul class="translations-list">
+<!-- English -->
+<li><a href="/software/dotgnu-forum/index.html">English</a>&nbsp;[en]</li>
+</ul>
+</div>
+</div>
+
+</body>
+
+</html>
