index.html: Fixing some HTML bugs.

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ repository. <!-- Only translations from this site will be incorporated into
 Foo. -->
 For more information, see the <a
 href="http://translationproject.org/html/welcome.html">Translation
-Project</a>.
+Project</a>.</p>
 
 
 
@@ -172,7 +172,7 @@ option) any later version.</p>
     notice, and the copyright notice, are preserved.</p>
 
     <p>Updated: <!-- timestamp start -->
-    $Date: 2009/08/08 19:35:13 $
+    $Date: 2009/08/08 19:41:56 $
     <!-- timestamp end --></p>
 </div>
 
