--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ option) any later version.</p>
     notice, and the copyright notice, are preserved.</p>
 
     <p>Updated: <!-- timestamp start -->
-    $Date: 2009/08/08 19:41:56 $
+    $Date: 2009/08/08 19:45:21 $
     <!-- timestamp end --></p>
 </div>
 
@@ -200,6 +200,14 @@ option) any later version.</p>
 <li><a href="/software/dotgnu-forum/index.html">English</a>&nbsp;[en]</li>
 </ul>
 </div>
+</div>
+
+<div id="banners">
+<p>
+    <a href="http://validator.w3.org/check?uri=referer"><img
+        src="http://www.w3.org/Icons/valid-xhtml10"
+        alt="Valid XHTML 1.0 Strict" height="31" width="88" /></a>
+</p>
 </div>
 
 </body>
