Some minor changes in the first paragraph of index.html. Hiring any suggestions and describing C# usage.

--- a/index.html
+++ b/index.html
@@ -8,17 +8,20 @@
 
 
 
-<p>This project is part of the GNU Project
+<p>This project is part of the
+<a href="/">GNU Project</a>
 (<a href="/software/dotgnu/index.html">DotGNU subproject</a>).
-The <strong>DotGNU Forum System, or simply DotGNU Forum,</strong>
-is a multi-user simultaneous editing supporting
-system with an internal document web.
-Maybe, in the future it should become the
+The <strong>DotGNU Forum System,</strong>
+or simply <strong>DotGNU Forum,</strong>
+project's mission is to release full featured
 Website Revision System
-(<acronym title="Website Revision System">WRS</acronym>) and
-Model-View Controller
-(<acronym title="Model-View Controller">MVC</acronym>),
-written in C#.</p>
+(<acronym title="Website Revision System">WRS</acronym>).
+Now project is under replanning stage, so, any suggestions
+are welcome!
+Now it is clear that whole DotGNU Forum should be written
+in C#, it is the fittest programming language for this
+task, it also provides needed security and coding discipline
+level.</p>
 
 
 
@@ -172,7 +175,7 @@ option) any later version.</p>
     notice, and the copyright notice, are preserved.</p>
 
     <p>Updated: <!-- timestamp start -->
-    $Date: 2009/08/08 19:52:00 $
+    $Date: 2009/08/23 20:05:00 $
     <!-- timestamp end --></p>
 </div>
 
