looking for a maintainer

--- a/index.html
+++ b/index.html
@@ -7,23 +7,11 @@
 <h2>DotGNU Forum System</h2>
 
 
-
-<p>This project is part of the
-<a href="/">GNU Project</a>
-(<a href="/software/dotgnu/index.html">DotGNU subproject</a>).
-The <strong>DotGNU Forum System,</strong>
-or simply <strong>DotGNU Forum,</strong>
-project's mission is to release full featured
-Website Revision System
-(<acronym title="Website Revision System">WRS</acronym>).
-Now project is under replanning stage, so, any suggestions
-are welcome!
-Now it is clear that whole DotGNU Forum should be written
-in C#, it is the fittest programming language for this
-task, it also provides needed security and coding discipline
-level.</p>
-
-
+<p>DotGNU-forum is looking for a maintainer. If you're interested,
+please read this <a href="/help/evaluation.html#whatmeans">general
+information about GNU packages and being a GNU maintainer</a>, and then
+email maintainers@gnu.org with a bit about your background and interest
+in this package.  Thanks.</p>
 
 
 <h3>Downloading DotGNU Forum</h3>
@@ -129,9 +117,8 @@ Project</a>.</p>
 <h4>Maintainer</h4>
 
 <p>DotGNU Forum System
-is currently being maintained by
-Vasily Eremenko.
-Please use the mailing lists for contact.</p>
+is currently looking for a maintainer.
+</p>
 
 
 
@@ -175,7 +162,7 @@ option) any later version.</p>
     notice, and the copyright notice, are preserved.</p>
 
     <p>Updated: <!-- timestamp start -->
-    $Date: 2009/08/23 20:05:00 $
+    $Date: 2010/11/12 00:36:48 $
     <!-- timestamp end --></p>
 </div>
 
