Upgrade to boilerplate 1.79; list webmasters@gnu.org for comments about the web page.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!--#include virtual="/server/header.html" -->
+<!-- Parent-Version: 1.79 -->
 <title>DotGNU Forum System
 - GNU Project - Free Software Foundation</title>
+<!--#include virtual="/server/gnun/initial-translations-list.html" -->
 <!--#include virtual="/server/banner.html" -->
-
 
 <h2>DotGNU Forum System</h2>
 
@@ -136,63 +137,23 @@ option) any later version.</p>
 
 
 </div><!-- for id="content", starts in the include above -->
-
 <!--#include virtual="/server/footer.html" -->
-
 <div id="footer">
-    <p>Please send FSF &amp; GNU inquiries to <a href=
-    "mailto:gnu@gnu.org"><em>gnu@gnu.org</em></a>. There are also
-    <a href="/home.html#ContactInfo">other
-    ways to contact</a> the
-    FSF.<br />
-    Please send broken links and other corrections (or suggestions) to
-    <a href=
-    "mailto:bug-dotgnu-forum@gnu.org">&lt;bug-dotgnu-forum@gnu.org&gt;</a>.</p>
+<div class="unprintable">
 
-    <p>Please see the <a
-    href="/server/standards/README.translations.html">Translations
-    README</a> for information on coordinating and submitting translations
-    of this article.</p>
+<p>Please send general FSF &amp; GNU inquiries to
+<a href="mailto:gnu@gnu.org">&lt;gnu@gnu.org&gt;</a>.
+There are also <a href="/contact/">other ways to contact</a>
+the FSF.  Broken links and other corrections or suggestions can be sent
+to <a href="mailto:webmasters@gnu.org">&lt;webmasters@gnu.org&gt;</a>.</p>
 
-    <p>Copyright &copy; 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009
-    Free Software Foundation, Inc.</p>
-
-    <p>Verbatim copying and distribution of this entire article are
-    permitted worldwide, without royalty, in any medium, provided this
-    notice, and the copyright notice, are preserved.</p>
-
-    <p>Updated: <!-- timestamp start -->
-    $Date: 2010/11/12 00:36:48 $
-    <!-- timestamp end --></p>
+<p>Please see the <a
+href="/server/standards/README.translations.html">Translations
+README</a> for information on coordinating and submitting translations
+of this article.</p>
 </div>
 
-
-<div id="translations">
-<h4>Translations of this page</h4>
-
-<!-- Please keep this list alphabetical by language code. -->
-<!-- Comment what the language is for each type, i.e. de is German. -->
-<!-- Write the language name in its own language (Deutsch) in the text. -->
-<!-- If you add a new language here, please -->
-<!-- advise web-translators@gnu.org and add it to -->
-<!--  - /home/www/html/server/standards/README.translations.html -->
-<!--  - one of the lists under the section "Translations Underway" -->
-<!--  - if there is a translation team, you also have to add an alias -->
-<!--  to mail.gnu.org:/com/mailer/aliases -->
-<!-- Please also check you have the language code right; see: -->
-<!-- http://www.loc.gov/standards/iso639-2/php/code_list.php -->
-<!-- If the 2-letter ISO 639-1 code is not available, -->
-<!-- use the 3-letter ISO 639-2. -->
-<!-- Please use W3C normative character entities. -->
-
-<ul class="translations-list">
-<!-- English -->
-<li><a href="/software/dotgnu-forum/index.html">English</a>&nbsp;[en]</li>
-</ul>
-</div>
-</div>
-
-<div id="banners">
+<div id="banners" class="imgright">
 <p>
     <a href="http://validator.w3.org/check?uri=referer"><img
         src="http://www.w3.org/Icons/valid-xhtml10"
@@ -200,6 +161,37 @@ option) any later version.</p>
 </p>
 </div>
 
-</body>
+<!-- Regarding copyright, in general, standalone pages (as opposed to
+     files generated as part of manuals) on the GNU web server should
+     be under CC BY-ND 4.0.  Please do NOT change or remove this
+     without talking with the webmasters or licensing team first.
+     Please make sure the copyright date is consistent with the
+     document.  For web pages, it is ok to list just the latest year the
+     document was modified, or published.
+     
+     If you wish to list earlier years, that is ok too.
+     Either "2001, 2002, 2003" or "2001-2003" are ok for specifying
+     years, as long as each year in the range is in fact a copyrightable
+     year, i.e., a year in which the document was published (including
+     being publicly visible on the web or in a revision control system).
+     
+     There is more detail about copyright years in the GNU Maintainers
+     Information document, www.gnu.org/prep/maintain. -->
 
+<p>Copyright &copy; 2002-2009 Free Software Foundation, Inc.</p>
+
+<p>This page is licensed under a <a rel="license"
+href="http://creativecommons.org/licenses/by-nd/4.0/">Creative
+Commons Attribution-NoDerivatives 4.0 International License</a>.</p>
+
+<!--#include virtual="/server/bottom-notes.html" -->
+
+<p class="unprintable">Updated:
+<!-- timestamp start -->
+$Date: 2016/05/15 10:23:42 $
+<!-- timestamp end -->
+</p>
+</div>
+</div>
+</body>
 </html>
