Remove <acronym> and <tt>.

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@ with a bit about your background and interest in this package.  Thanks.</p>
 
 <p>At this time there is not any distributable versions available... Yet!</p>
 
-<p>You can take the
-<acronym title="Concurrent Versions System">CVS</acronym> snapshot of the
+<p>You can take the CVS snapshot of the
 source code by visiting
 <a href="https://savannah.gnu.org/projects/dotgnu-forum/">DotGNU
 Forum
@@ -58,7 +57,7 @@ and most other GNU software are made on
 <a href="mailto:info-dotgnu-forum@gnu.org">&lt;info-dotgnu-forum@gnu.org&gt;</a>.</p>
 
 <p>To subscribe to these or any GNU mailing lists, please send an empty
-mail with a Subject: header of just <tt>subscribe</tt> to the relevant
+mail with a Subject: header of just “subscribe” to the relevant
 -request list.  For example, to subscribe yourself to the GNU
 announcement list, you would send mail to <a
 href="mailto:info-dotgnu-forum@gnu.org?Subject=subscribe"
@@ -188,7 +187,7 @@ Commons Attribution-NoDerivatives 4.0 International License</a>.</p>
 
 <p class="unprintable">Updated:
 <!-- timestamp start -->
-$Date: 2019/10/21 14:12:37 $
+$Date: 2020/07/31 07:04:12 $
 <!-- timestamp end -->
 </p>
 </div>
